Fix dark mode for workboard trigger preview dialog
Summary:
Do not hardcode the background color for the `workboard-drop-preview` but use the {$page.content} variable instead.

Refs T15056

Test Plan:
* Go http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to a project workboard with at least one non-default column which is not a proxy
* Set up a workboard trigger via the cogs button in the header of a workboard column
* Hover over the cogs button and look at the preview displayed in the bottom right corner

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26139

--- a/webroot/rsrc/css/phui/workboards/phui-workpanel.css
+++ b/webroot/rsrc/css/phui/workboards/phui-workpanel.css
@@ -189,7 +189,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
   border: 1px solid {$lightblueborder};
   padding: 4px 0;
-  background: #fff;
+  background: {$page.content};
 }
 
 .workboard-drop-preview li {
